# ci/phpunit/fixtures/openapi/crackerbinarytype.spec.json
@@ -1366,10 +1366,14 @@
                                 "properties": {
                                     "typeName": {
                                         "type": "string"
+                                    },
+                                    "accessGroupId": {
+                                        "type": "integer"
                                     }
                                 },
                                 "required": [
-                                    "typeName"
+                                    "typeName",
+                                    "accessGroupId"
                                 ]
                             }
                         }
@@ -1545,7 +1549,8 @@
                                 "type": "object",
                                 "required": [
                                     "typeName",
-                                    "isChunkingAvailable"
+                                    "isChunkingAvailable",
+                                    "accessGroupId"
                                 ],
                                 "properties": {
                                     "typeName": {
@@ -1556,6 +1561,9 @@
                                             "boolean",
                                             "null"
                                         ]
+                                    },
+                                    "accessGroupId": {
+                                        "type": "integer"
                                     }
                                 }
                             },
@@ -1699,7 +1707,8 @@
                                                 "version",
                                                 "downloadUrl",
                                                 "binaryName",
-                                                "filename"
+                                                "filename",
+                                                "accessGroupId"
                                             ],
                                             "properties": {
                                                 "crackerBinaryTypeId": {
@@ -1724,6 +1733,9 @@
                                                         "null"
                                                     ],
                                                     "description": "Filename of the locally stored 7z archive, null when the binary is downloaded from the downloadUrl. Cannot be provided."
+                                                },
+                                                "accessGroupId": {
+                                                    "type": "integer"
                                                 }
                                             }
                                         }
@@ -1927,7 +1939,8 @@
                                 "type": "object",
                                 "required": [
                                     "typeName",
-                                    "isChunkingAvailable"
+                                    "isChunkingAvailable",
+                                    "accessGroupId"
                                 ],
                                 "properties": {
                                     "typeName": {
@@ -1938,6 +1951,9 @@
                                             "boolean",
                                             "null"
                                         ]
+                                    },
+                                    "accessGroupId": {
+                                        "type": "integer"
                                     }
                                 }
                             },
@@ -2081,7 +2097,8 @@
                                                 "version",
                                                 "downloadUrl",
                                                 "binaryName",
-                                                "filename"
+                                                "filename",
+                                                "accessGroupId"
                                             ],
                                             "properties": {
                                                 "crackerBinaryTypeId": {
@@ -2106,6 +2123,9 @@
                                                         "null"
                                                     ],
                                                     "description": "Filename of the locally stored 7z archive, null when the binary is downloaded from the downloadUrl. Cannot be provided."
+                                                },
+                                                "accessGroupId": {
+                                                    "type": "integer"
                                                 }
                                             }
                                         }
@@ -2309,7 +2329,8 @@
                                 "type": "object",
                                 "required": [
                                     "typeName",
-                                    "isChunkingAvailable"
+                                    "isChunkingAvailable",
+                                    "accessGroupId"
                                 ],
                                 "properties": {
                                     "typeName": {
@@ -2320,6 +2341,9 @@
                                             "boolean",
                                             "null"
                                         ]
+                                    },
+                                    "accessGroupId": {
+                                        "type": "integer"
                                     }
                                 }
                             },
@@ -2463,7 +2487,8 @@
                                                 "version",
                                                 "downloadUrl",
                                                 "binaryName",
-                                                "filename"
+                                                "filename",
+                                                "accessGroupId"
                                             ],
                                             "properties": {
                                                 "crackerBinaryTypeId": {
@@ -2488,6 +2513,9 @@
                                                         "null"
                                                     ],
                                                     "description": "Filename of the locally stored 7z archive, null when the binary is downloaded from the downloadUrl. Cannot be provided."
+                                                },
+                                                "accessGroupId": {
+                                                    "type": "integer"
                                                 }
                                             }
                                         }
@@ -2742,7 +2770,8 @@
                                     "type": "object",
                                     "required": [
                                         "typeName",
-                                        "isChunkingAvailable"
+                                        "isChunkingAvailable",
+                                        "accessGroupId"
                                     ],
                                     "properties": {
                                         "typeName": {
@@ -2753,6 +2782,9 @@
                                                 "boolean",
                                                 "null"
                                             ]
+                                        },
+                                        "accessGroupId": {
+                                            "type": "integer"
                                         }
                                     }
                                 },
@@ -2897,7 +2929,8 @@
                                                 "version",
                                                 "downloadUrl",
                                                 "binaryName",
-                                                "filename"
+                                                "filename",
+                                                "accessGroupId"
                                             ],
                                             "properties": {
                                                 "crackerBinaryTypeId": {
@@ -2922,6 +2955,9 @@
                                                         "null"
                                                     ],
                                                     "description": "Filename of the locally stored 7z archive, null when the binary is downloaded from the downloadUrl. Cannot be provided."
+                                                },
+                                                "accessGroupId": {
+                                                    "type": "integer"
                                                 }
                                             }
                                         }
